--- a/css/style.css
+++ b/css/style.css
@@ -268,3 +268,16 @@ img {
 #reported {
     display: none;
 }
+
+@media only screen and (max-width: 992px) {
+    #posts {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media only screen and (max-width: 576px) {
+    #posts {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
